--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,10 +10,9 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  build-and-push-app:
     runs-on: ubuntu-latest
-    timeout-minutes: 120
-
+    timeout-minutes: 60
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -56,10 +55,58 @@ jobs:
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
           ghcr.io/${{ github.repository_owner }}/app:latest
-        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/app:buildcache
-        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/app:buildcache,mode=max
+        cache-from: |
+          type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/app:buildcache
+          type=registry,ref=ghcr.io/${{ github.repository_owner }}/app:buildcache
+        cache-to: |
+          type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/app:buildcache,mode=max
+          type=registry,ref=ghcr.io/${{ github.repository_owner }}/app:buildcache,mode=max
         build-args: |
           BUILDKIT_INLINE_CACHE=1
+
+    - name: Clean up after build
+      if: always()
+      run: |
+        docker system prune -af
+        docker volume prune -f
+        docker network prune -f
+        df -h
+
+  build-and-push-gradio:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Aggressive disk space cleanup
+      run: |
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        docker system prune -af
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
+        sudo rm -rf /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup
+        sudo rm -rf /home/linuxbrew
+        sudo rm -rf /usr/local/lib/node_modules
+        sudo rm -rf /var/lib/docker/overlay2
+        df -h
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
 
     - name: Build and push gradio image
       uses: docker/build-push-action@v5
@@ -70,8 +117,12 @@ jobs:
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/gradio:latest
           ghcr.io/${{ github.repository_owner }}/gradio:latest
-        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gradio:buildcache
-        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gradio:buildcache,mode=max
+        cache-from: |
+          type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gradio:buildcache
+          type=registry,ref=ghcr.io/${{ github.repository_owner }}/gradio:buildcache
+        cache-to: |
+          type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gradio:buildcache,mode=max
+          type=registry,ref=ghcr.io/${{ github.repository_owner }}/gradio:buildcache,mode=max
         build-args: |
           BUILDKIT_INLINE_CACHE=1
 
@@ -79,39 +130,12 @@ jobs:
       if: always()
       run: |
         docker system prune -af
-        df -h
-
-    - name: Set up environment variables
-      run: |
-        echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" >> $GITHUB_ENV
-        echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> $GITHUB_ENV
-
-    - name: Install Docker Compose and Run build and test
-      id: build-and-test
-      timeout-minutes: 30
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        docker-compose --version
-
-        echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" > ./project/.env
-        echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> ./project/.env
-
-        cd ./project
-        docker-compose up -d
-        sleep 30
-        docker-compose exec -T app python -c "print('App container is running')"
-        docker-compose exec -T gradio python -c "print('Gradio container is running')"
-        docker-compose down
-
-    - name: Clean up after test
-      if: always()
-      run: |
-        docker system prune -af
+        docker volume prune -f
+        docker network prune -f
         df -h
 
   test-deployment:
-    needs: build-and-push
+    needs: [build-and-push-app, build-and-push-gradio]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -129,6 +153,11 @@ jobs:
         sudo rm -rf /usr/local/lib/node_modules
         sudo rm -rf /var/lib/docker/overlay2
         df -h
+
+    - name: Set up environment variables
+      run: |
+        echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" >> $GITHUB_ENV
+        echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> $GITHUB_ENV
 
     - name: Install Docker Compose and Run deployment test
       run: |
@@ -158,4 +187,6 @@ jobs:
       if: always()
       run: |
         docker system prune -af
+        docker volume prune -f
+        docker network prune -f
         df -h
