--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,28 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
+    - name: Reinstall Docker
+      run: |
+        sudo apt-get remove -y docker docker-engine docker.io containerd runc
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo systemctl enable docker
+        sudo systemctl start docker
+
+    - name: Configure Docker Storage Driver
+      run: |
+        echo '{"storage-driver": "vfs"}' | sudo tee /etc/docker/daemon.json
+        sudo systemctl restart docker
+
+    - name: Aggressive disk space cleanup
+      run: |
+        sudo rm -rf /var/lib/docker/overlay2
+        sudo rm -rf /var/lib/docker/containers
+        sudo rm -rf /var/lib/docker/tmp
+        docker system prune -af --volumes
+        sudo service docker restart
+        df -h
+
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -21,40 +43,6 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         version: latest
-
-    - name: Aggressive disk space cleanup
-      run: |
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt-get clean
-        sudo apt-get autoclean
-        sudo apt-get autoremove -y
-        docker stop $(docker ps -aq) || true
-        docker rm -f $(docker ps -aq) || true
-        docker rmi -f $(docker images -q) || true
-        docker system prune -af --volumes
-        docker network prune -f
-        sudo rm -rf /var/lib/docker/overlay2
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
-        sudo rm -rf /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup
-        sudo rm -rf /home/linuxbrew
-        sudo rm -rf /usr/local/lib/node_modules
-        sudo rm -rf /var/log/journal
-        sudo rm -rf /var/tmp/*
-        df -h
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_PAT }}
 
     - name: Pull and tag BuildKit image
       run: |
@@ -108,37 +96,17 @@ jobs:
 
     - name: Aggressive disk space cleanup
       run: |
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt-get clean
-        sudo apt-get autoclean
-        sudo apt-get autoremove -y
-        docker stop $(docker ps -aq) || true
-        docker rm -f $(docker ps -aq) || true
-        docker rmi -f $(docker images -q) || true
-        docker system prune -af --volumes
-        docker network prune -f
         sudo rm -rf /var/lib/docker/overlay2
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
-        sudo rm -rf /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup
-        sudo rm -rf /home/linuxbrew
-        sudo rm -rf /usr/local/lib/node_modules
-        sudo rm -rf /var/log/journal
-        sudo rm -rf /var/tmp/*
+        sudo rm -rf /var/lib/docker/containers
+        sudo rm -rf /var/lib/docker/tmp
+        docker system prune -af --volumes
+        sudo service docker restart
         df -h
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_PAT }}
+    - name: Pull and tag BuildKit image
+      run: |
+        for i in {1..3}; do docker pull moby/buildkit:latest && break || sleep 10; done
+        docker tag moby/buildkit:latest moby/buildkit:buildx-stable-1
 
     - name: Build and push gradio image
       uses: docker/build-push-action@v5
@@ -182,23 +150,11 @@ jobs:
 
     - name: Aggressive disk space cleanup
       run: |
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt-get clean
-        sudo apt-get autoclean
-        sudo apt-get autoremove -y
-        docker stop $(docker ps -aq) || true
-        docker rm -f $(docker ps -aq) || true
-        docker rmi -f $(docker images -q) || true
-        docker system prune -af --volumes
-        docker network prune -f
         sudo rm -rf /var/lib/docker/overlay2
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
-        sudo rm -rf /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup
-        sudo rm -rf /home/linuxbrew
-        sudo rm -rf /usr/local/lib/node_modules
-        sudo rm -rf /var/log/journal
-        sudo rm -rf /var/tmp/*
+        sudo rm -rf /var/lib/docker/containers
+        sudo rm -rf /var/lib/docker/tmp
+        docker system prune -af --volumes
+        sudo service docker restart
         df -h
 
     - name: Set up environment variables
