--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -180,65 +180,67 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Aggressive disk space cleanup
-      run: |
-        sudo swapoff -a
-        sudo rm -f /swapfile
-        sudo apt-get clean
-        sudo apt-get autoclean
-        sudo apt-get autoremove -y
-        docker stop $(docker ps -aq) || true
-        docker rm -f $(docker ps -aq) || true
-        docker rmi -f $(docker images -q) || true
-        docker system prune -af --volumes
-        docker network prune -f
-        sudo rm -rf /var/lib/docker/overlay2
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
-        sudo rm -rf /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup
-        sudo rm -rf /home/linuxbrew
-        sudo rm -rf /usr/local/lib/node_modules
-        sudo rm -rf /var/log/journal
-        sudo rm -rf /var/tmp/*
-        df -h
-
     - name: Set up environment variables
       run: |
         echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" >> $GITHUB_ENV
         echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> $GITHUB_ENV
 
-    - name: Install Docker Compose and Run deployment test
+    - name: Install Docker Compose
       run: |
         sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
         docker-compose --version
 
+    - name: Create .env file
+      run: |
         echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" > ./project/.env
         echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> ./project/.env
 
+    - name: Pull and run Docker containers
+      run: |
         cd ./project
         docker-compose pull
         docker-compose up -d
-        sleep 30
+        sleep 30  # Give containers time to start up
+
+    - name: Check container status
+      run: |
+        docker-compose ps
+
+    - name: Check port availability
+      run: |
+        echo "Checking port 8001 (App): http://localhost:8001"
+        nc -zv localhost 8001 && echo "Port 8001 is open" || echo "Port 8001 is not open"
         
-        nc -zv localhost 8001 || echo "Port 8001 is not open"
-        nc -zv localhost 7860 || echo "Port 7860 is not open"
-        nc -zv localhost 11434 || echo "Port 11434 is not open"
+        echo "Checking port 7860 (Gradio): http://localhost:7860"
+        nc -zv localhost 7860 && echo "Port 7860 is open" || echo "Port 7860 is not open"
+        
+        echo "Checking port 11434 (Ollama): http://localhost:11434"
+        nc -zv localhost 11434 && echo "Port 11434 is open" || echo "Port 11434 is not open"
 
-        curl -f http://localhost:8001/health || echo "Health check failed for port 8001"
-        curl -f http://localhost:7860/health || echo "Health check failed for port 7860"
+    - name: Perform health checks
+      run: |
+        echo "Health check for App (port 8001): http://localhost:8001/health"
+        curl -f http://localhost:8001/health && echo "Health check passed for port 8001" || echo "Health check failed for port 8001"
+        
+        echo "Health check for Gradio (port 7860): http://localhost:7860/health"
+        curl -f http://localhost:7860/health && echo "Health check passed for port 7860" || echo "Health check failed for port 7860"
 
+    - name: Display container logs
+      if: always()
+      run: |
+        cd ./project
         docker-compose logs
+
+    - name: Stop and remove containers
+      if: always()
+      run: |
+        cd ./project
         docker-compose down
 
-    - name: Clean up after test
+    - name: Clean up
       if: always()
       run: |
         docker system prune -af
         docker volume prune -f
         docker network prune -f
-        df -h
-
-    - name: Check disk space
-      run: |
-        df -h
-        du -sh /*
